[BEAM-4303] Enforce ErrorProne analysis in examples project